--- a/style.css
+++ b/style.css
@@ -17,26 +17,19 @@ h1{
 }
 
 .inputSection{
-    margin: 50px 0px 50px 0px;
-    width: 500px;
-
+    margin: 50px 0px 80px 0px;
+    width: 400px;
 }
 
 .inputs{
-    width:inherit;
-    display:flex;
-    direction: column;
-
-}
-
-input{
+    width: inherit;
+    display: flex;
+    flex-direction: column;
     margin-top: 10px;
     margin-bottom: 15px;
-    width: inherit;
 }
-
-.addOption{
-    margin-top: 10px;
+input{
+    margin-top: 15px;
 }
 
 button{
