new more jquery

--- a/style.css
+++ b/style.css
@@ -37,3 +37,12 @@ button{
     background-color: bisque;
     color: #0d260d;
 }
+
+.resultSection{
+    height: 250px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+
+}
